
[TestNoUnsafeAssignmentRule/invalid-0 - 1]
Diagnostic 1: anyAssignment (1:9 - 1:9)
Message: Unsafe assignment of an any value.
   1 | const x = 1 as any;
     |         ~
  Label: Assigned value has type `any`. (1:11 - 1:18)
   1 | const x = 1 as any;
     |           ^^^^^^^^ Assigned value has type `any`.
  Label: Target is inferred as `any`. (1:7 - 1:7)
   1 | const x = 1 as any;
     |       ^ Target is inferred as `any`.
---

[TestNoUnsafeAssignmentRule/invalid-1 - 1]
Diagnostic 1: anyAssignment (2:9 - 2:9)
Message: Unsafe assignment of an any value.
   1 | 
   2 | const x = 1 as any,
     |         ~
   3 |   y = 1;
  Label: Assigned value has type `any`. (2:11 - 2:18)
   1 | 
   2 | const x = 1 as any,
     |           ^^^^^^^^ Assigned value has type `any`.
   3 |   y = 1;
  Label: Target is inferred as `any`. (2:7 - 2:7)
   1 | 
   2 | const x = 1 as any,
     |       ^ Target is inferred as `any`.
   3 |   y = 1;
---

[TestNoUnsafeAssignmentRule/invalid-2 - 1]
Diagnostic 1: anyAssignment (1:16 - 1:16)
Message: Unsafe assignment of an any value.
   1 | function foo(a = 1 as any) {}
     |                ~
  Label: Assigned value has type `any`. (1:18 - 1:25)
   1 | function foo(a = 1 as any) {}
     |                  ^^^^^^^^ Assigned value has type `any`.
  Label: Target expects type `any`. (1:14 - 1:14)
   1 | function foo(a = 1 as any) {}
     |              ^ Target expects type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-3 - 1]
Diagnostic 1: anyAssignment (3:25 - 3:25)
Message: Unsafe assignment of an any value.
   2 | class Foo {
   3 |   constructor(private a = 1 as any) {}
     |                         ~
   4 | }
  Label: Assigned value has type `any`. (3:27 - 3:34)
   2 | class Foo {
   3 |   constructor(private a = 1 as any) {}
     |                           ^^^^^^^^ Assigned value has type `any`.
   4 | }
  Label: Target expects type `any`. (3:23 - 3:23)
   2 | class Foo {
   3 |   constructor(private a = 1 as any) {}
     |                       ^ Target expects type `any`.
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-4 - 1]
Diagnostic 1: anyAssignment (3:13 - 3:13)
Message: Unsafe assignment of an any value.
   2 | class Foo {
   3 |   private a = 1 as any;
     |             ~
   4 | }
  Label: Assigned value has type `any`. (3:15 - 3:22)
   2 | class Foo {
   3 |   private a = 1 as any;
     |               ^^^^^^^^ Assigned value has type `any`.
   4 | }
  Label: Target is inferred as `any`. (3:11 - 3:11)
   2 | class Foo {
   3 |   private a = 1 as any;
     |           ^ Target is inferred as `any`.
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-5 - 1]
Diagnostic 1: anyAssignment (3:14 - 3:14)
Message: Unsafe assignment of an any value.
   2 | class Foo {
   3 |   accessor a = 1 as any;
     |              ~
   4 | }
  Label: Assigned value has type `any`. (3:16 - 3:23)
   2 | class Foo {
   3 |   accessor a = 1 as any;
     |                ^^^^^^^^ Assigned value has type `any`.
   4 | }
  Label: Target is inferred as `any`. (3:12 - 3:12)
   2 | class Foo {
   3 |   accessor a = 1 as any;
     |            ^ Target is inferred as `any`.
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-6 - 1]
Diagnostic 1: anyAssignment (2:11 - 2:11)
Message: Unsafe assignment of an error typed value.
   1 | 
   2 | const [x] = spooky;
     |           ~
   3 |       
  Label: Assigned value has type `error`. (2:13 - 2:18)
   1 | 
   2 | const [x] = spooky;
     |             ^^^^^^ Assigned value has type `error`.
   3 |       
  Label: Target is inferred as `error`. (2:7 - 2:9)
   1 | 
   2 | const [x] = spooky;
     |       ^^^ Target is inferred as `error`.
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-7 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (2:8 - 2:12)
Message: Unsafe array destructuring of a tuple element with an error typed value.
   1 | 
   2 | const [[[x]]] = [spooky];
     |        ~~~~~
   3 |       
  Label: Destructured source provides type `error`. (2:17 - 2:24)
   1 | 
   2 | const [[[x]]] = [spooky];
     |                 ^^^^^^^^ Destructured source provides type `error`.
   3 |       
  Label: This binding receives type `error`. (2:8 - 2:12)
   1 | 
   2 | const [[[x]]] = [spooky];
     |        ^^^^^ This binding receives type `error`.
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-8 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (3:6 - 3:13)
Message: Unsafe array destructuring of a tuple element with an error typed value.
   2 | const {
   3 |   x: { y: z },
     |      ~~~~~~~~
   4 | } = { x: spooky };
  Label: Destructured source provides type `error`. (4:5 - 4:17)
   3 |   x: { y: z },
   4 | } = { x: spooky };
     |     ^^^^^^^^^^^^^ Destructured source provides type `error`.
   5 |       
  Label: This binding receives type `error`. (3:6 - 3:13)
   2 | const {
   3 |   x: { y: z },
     |      ^^^^^^^^ This binding receives type `error`.
   4 | } = { x: spooky };

Diagnostic 2: anyAssignment (4:8 - 4:8)
Message: Unsafe assignment of an error typed value.
   3 |   x: { y: z },
   4 | } = { x: spooky };
     |        ~
   5 |       
  Label: Assigned value has type `error`. (4:10 - 4:15)
   3 |   x: { y: z },
   4 | } = { x: spooky };
     |          ^^^^^^ Assigned value has type `error`.
   5 |       
  Label: Target expects type `{ y: any; }`. (4:7 - 4:7)
   3 |   x: { y: z },
   4 | } = { x: spooky };
     |       ^ Target expects type `{ y: any; }`.
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-9 - 1]
Diagnostic 1: anyAssignment (4:7 - 4:7)
Message: Unsafe assignment of an error typed value.
   3 | 
   4 | value = spooky;
     |       ~
   5 |       
  Label: Assigned value has type `error`. (4:9 - 4:14)
   3 | 
   4 | value = spooky;
     |         ^^^^^^ Assigned value has type `error`.
   5 |       
  Label: Target expects type `number`. (4:1 - 4:5)
   3 | 
   4 | value = spooky;
     | ^^^^^ Target expects type `number`.
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-10 - 1]
Diagnostic 1: anyAssignment (2:11 - 2:11)
Message: Unsafe assignment of an any value.
   1 | 
   2 | const [x] = 1 as any;
     |           ~
   3 |       
  Label: Assigned value has type `any`. (2:13 - 2:20)
   1 | 
   2 | const [x] = 1 as any;
     |             ^^^^^^^^ Assigned value has type `any`.
   3 |       
  Label: Target is inferred as `any`. (2:7 - 2:9)
   1 | 
   2 | const [x] = 1 as any;
     |       ^^^ Target is inferred as `any`.
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-11 - 1]
Diagnostic 1: unsafeArrayPattern (2:7 - 2:9)
Message: Unsafe array destructuring of an any array value.
   1 | 
   2 | const [x] = [] as any[];
     |       ~~~
   3 |       
  Label: Destructured source provides type `any[]`. (2:13 - 2:23)
   1 | 
   2 | const [x] = [] as any[];
     |             ^^^^^^^^^^^ Destructured source provides type `any[]`.
   3 |       
  Label: This binding receives type `any`. (2:7 - 2:9)
   1 | 
   2 | const [x] = [] as any[];
     |       ^^^ This binding receives type `any`.
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-12 - 1]
Diagnostic 1: unsafeAssignment (1:22 - 1:22)
Message: Unsafe assignment between incompatible types.
   1 | const x: Set<string> = new Set<any>();
     |                      ~
  Label: Assigned value has type `Set<any>`. (1:24 - 1:37)
   1 | const x: Set<string> = new Set<any>();
     |                        ^^^^^^^^^^^^^^ Assigned value has type `Set<any>`.
  Label: Target expects type `Set<string>`. (1:10 - 1:20)
   1 | const x: Set<string> = new Set<any>();
     |          ^^^^^^^^^^^ Target expects type `Set<string>`.
---

[TestNoUnsafeAssignmentRule/invalid-13 - 1]
Diagnostic 1: unsafeAssignment (1:30 - 1:30)
Message: Unsafe assignment between incompatible types.
   1 | const x: Map<string, string> = new Map<string, any>();
     |                              ~
  Label: Assigned value has type `Map<string, any>`. (1:32 - 1:53)
   1 | const x: Map<string, string> = new Map<string, any>();
     |                                ^^^^^^^^^^^^^^^^^^^^^^ Assigned value has type `Map<string, any>`.
  Label: Target expects type `Map<string, string>`. (1:10 - 1:28)
   1 | const x: Map<string, string> = new Map<string, any>();
     |          ^^^^^^^^^^^^^^^^^^^ Target expects type `Map<string, string>`.
---

[TestNoUnsafeAssignmentRule/invalid-14 - 1]
Diagnostic 1: unsafeAssignment (1:24 - 1:24)
Message: Unsafe assignment between incompatible types.
   1 | const x: Set<string[]> = new Set<any[]>();
     |                        ~
  Label: Assigned value has type `Set<any[]>`. (1:26 - 1:41)
   1 | const x: Set<string[]> = new Set<any[]>();
     |                          ^^^^^^^^^^^^^^^^ Assigned value has type `Set<any[]>`.
  Label: Target expects type `Set<string[]>`. (1:10 - 1:22)
   1 | const x: Set<string[]> = new Set<any[]>();
     |          ^^^^^^^^^^^^^ Target expects type `Set<string[]>`.
---

[TestNoUnsafeAssignmentRule/invalid-15 - 1]
Diagnostic 1: unsafeAssignment (1:32 - 1:32)
Message: Unsafe assignment between incompatible types.
   1 | const x: Set<Set<Set<string>>> = new Set<Set<Set<any>>>();
     |                                ~
  Label: Assigned value has type `Set<Set<Set<any>>>`. (1:34 - 1:57)
   1 | const x: Set<Set<Set<string>>> = new Set<Set<Set<any>>>();
     |                                  ^^^^^^^^^^^^^^^^^^^^^^^^ Assigned value has type `Set<Set<Set<any>>>`.
  Label: Target expects type `Set<Set<Set<string>>>`. (1:10 - 1:30)
   1 | const x: Set<Set<Set<string>>> = new Set<Set<Set<any>>>();
     |          ^^^^^^^^^^^^^^^^^^^^^ Target expects type `Set<Set<Set<string>>>`.
---

[TestNoUnsafeAssignmentRule/invalid-16 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:8 - 1:8)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [x] = [1] as [any]
     |        ~
  Label: Destructured source provides type `any`. (1:13 - 1:24)
   1 | const [x] = [1] as [any]
     |             ^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:8 - 1:8)
   1 | const [x] = [1] as [any]
     |        ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-17 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:15 - 1:15)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([x] = [1] as [any]) {}
     |               ~
  Label: Destructured source provides type `any`. (1:20 - 1:31)
   1 | function foo([x] = [1] as [any]) {}
     |                    ^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:15 - 1:15)
   1 | function foo([x] = [1] as [any]) {}
     |               ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-18 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:3 - 1:3)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([x] = [1] as [any])
     |   ~
  Label: Destructured source provides type `any`. (1:8 - 1:19)
   1 | ([x] = [1] as [any])
     |        ^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:3 - 1:3)
   1 | ([x] = [1] as [any])
     |   ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-19 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [[[[x]]]] = [[[[1 as any]]]]
     |           ~
  Label: Destructured source provides type `any`. (1:19 - 1:34)
   1 | const [[[[x]]]] = [[[[1 as any]]]]
     |                   ^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:11 - 1:11)
   1 | const [[[[x]]]] = [[[[1 as any]]]]
     |           ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-20 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:18 - 1:18)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([[[[x]]]] = [[[[1 as any]]]]) {}
     |                  ~
  Label: Destructured source provides type `any`. (1:26 - 1:41)
   1 | function foo([[[[x]]]] = [[[[1 as any]]]]) {}
     |                          ^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:18 - 1:18)
   1 | function foo([[[[x]]]] = [[[[1 as any]]]]) {}
     |                  ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-21 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:6 - 1:6)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([[[[x]]]] = [[[[1 as any]]]])
     |      ~
  Label: Destructured source provides type `any`. (1:14 - 1:29)
   1 | ([[[[x]]]] = [[[[1 as any]]]])
     |              ^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:6 - 1:6)
   1 | ([[[[x]]]] = [[[[1 as any]]]])
     |      ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-22 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:8 - 1:14)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [[[[x]]]] = [1 as any]
     |        ~~~~~~~
  Label: Destructured source provides type `any`. (1:19 - 1:28)
   1 | const [[[[x]]]] = [1 as any]
     |                   ^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:8 - 1:14)
   1 | const [[[[x]]]] = [1 as any]
     |        ^^^^^^^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-23 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:15 - 1:21)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([[[[x]]]] = [1 as any]) {}
     |               ~~~~~~~
  Label: Destructured source provides type `any`. (1:26 - 1:35)
   1 | function foo([[[[x]]]] = [1 as any]) {}
     |                          ^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:15 - 1:21)
   1 | function foo([[[[x]]]] = [1 as any]) {}
     |               ^^^^^^^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-24 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:9 - 1:9)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [{x}] = [{x: 1}] as [{x: any}]
     |         ~
  Label: Destructured source provides type `any`. (1:15 - 1:36)
   1 | const [{x}] = [{x: 1}] as [{x: any}]
     |               ^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:9 - 1:9)
   1 | const [{x}] = [{x: 1}] as [{x: any}]
     |         ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-25 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:16 - 1:16)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([{x}] = [{x: 1}] as [{x: any}]) {}
     |                ~
  Label: Destructured source provides type `any`. (1:22 - 1:43)
   1 | function foo([{x}] = [{x: 1}] as [{x: any}]) {}
     |                      ^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:16 - 1:16)
   1 | function foo([{x}] = [{x: 1}] as [{x: any}]) {}
     |                ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-26 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:4 - 1:4)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([{x}] = [{x: 1}] as [{x: any}])
     |    ~
  Label: Destructured source provides type `any`. (1:10 - 1:31)
   1 | ([{x}] = [{x: 1}] as [{x: any}])
     |          ^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:4 - 1:4)
   1 | ([{x}] = [{x: 1}] as [{x: any}])
     |    ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-27 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:16 - 1:16)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [{['x']: x}] = [{['x']: 1}] as [{['x']: any}]
     |                ~
  Label: Destructured source provides type `any`. (1:22 - 1:51)
   1 | const [{['x']: x}] = [{['x']: 1}] as [{['x']: any}]
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:16 - 1:16)
   1 | const [{['x']: x}] = [{['x']: 1}] as [{['x']: any}]
     |                ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-28 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:23 - 1:23)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([{['x']: x}] = [{['x']: 1}] as [{['x']: any}]) {}
     |                       ~
  Label: Destructured source provides type `any`. (1:29 - 1:58)
   1 | function foo([{['x']: x}] = [{['x']: 1}] as [{['x']: any}]) {}
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:23 - 1:23)
   1 | function foo([{['x']: x}] = [{['x']: 1}] as [{['x']: any}]) {}
     |                       ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-29 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([{['x']: x}] = [{['x']: 1}] as [{['x']: any}])
     |           ~
  Label: Destructured source provides type `any`. (1:17 - 1:46)
   1 | ([{['x']: x}] = [{['x']: 1}] as [{['x']: any}])
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:11 - 1:11)
   1 | ([{['x']: x}] = [{['x']: 1}] as [{['x']: any}])
     |           ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-30 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:16 - 1:16)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const [{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]
     |                ~
  Label: Destructured source provides type `any`. (1:22 - 1:51)
   1 | const [{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:16 - 1:16)
   1 | const [{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]
     |                ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-31 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:23 - 1:23)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]) {}
     |                       ~
  Label: Destructured source provides type `any`. (1:29 - 1:58)
   1 | function foo([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]) {}
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:23 - 1:23)
   1 | function foo([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}]) {}
     |                       ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-32 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}])
     |           ~
  Label: Destructured source provides type `any`. (1:17 - 1:46)
   1 | ([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}])
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:11 - 1:11)
   1 | ([{[`x`]: x}] = [{[`x`]: 1}] as [{[`x`]: any}])
     |           ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-33 - 1]
Diagnostic 1: unsafeAssignment (1:11 - 1:11)
Message: Unsafe assignment between incompatible types.
   1 | [[[[x]]]] = [1 as any];
     |           ~
  Label: Assigned value has type `[any]`. (1:13 - 1:22)
   1 | [[[[x]]]] = [1 as any];
     |             ^^^^^^^^^^ Assigned value has type `[any]`.
  Label: Target expects type `[[[[any]]]]`. (1:1 - 1:9)
   1 | [[[[x]]]] = [1 as any];
     | ^^^^^^^^^ Target expects type `[[[[any]]]]`.
---

[TestNoUnsafeAssignmentRule/invalid-34 - 1]
Diagnostic 1: unsafeArraySpread (2:12 - 2:14)
Message: Unsafe spread of an any value in an array.
   1 | 
   2 | const x = [...(1 as any)];
     |            ~~~
   3 |       
  Label: Spread value has type `any`. (2:15 - 2:24)
   1 | 
   2 | const x = [...(1 as any)];
     |               ^^^^^^^^^^ Spread value has type `any`.
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-35 - 1]
Diagnostic 1: unsafeArraySpread (2:12 - 2:14)
Message: Unsafe spread of an any value in an array.
   1 | 
   2 | const x = [...([] as any[])];
     |            ~~~
   3 |       
  Label: Spread value has type `any[]`. (2:15 - 2:27)
   1 | 
   2 | const x = [...([] as any[])];
     |               ^^^^^^^^^^^^^ Spread value has type `any[]`.
   3 |       
---

[TestNoUnsafeAssignmentRule/invalid-36 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:8 - 1:8)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x} = {x: 1} as {x: any}
     |        ~
  Label: Destructured source provides type `any`. (1:13 - 1:30)
   1 | const {x} = {x: 1} as {x: any}
     |             ^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:8 - 1:8)
   1 | const {x} = {x: 1} as {x: any}
     |        ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-37 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:15 - 1:15)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x} = {x: 1} as {x: any}) {}
     |               ~
  Label: Destructured source provides type `any`. (1:20 - 1:37)
   1 | function foo({x} = {x: 1} as {x: any}) {}
     |                    ^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:15 - 1:15)
   1 | function foo({x} = {x: 1} as {x: any}) {}
     |               ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-38 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:3 - 1:3)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x} = {x: 1} as {x: any})
     |   ~
  Label: Destructured source provides type `any`. (1:8 - 1:25)
   1 | ({x} = {x: 1} as {x: any})
     |        ^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:3 - 1:3)
   1 | ({x} = {x: 1} as {x: any})
     |   ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-39 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:11 - 1:11)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x: y} = {x: 1} as {x: any}
     |           ~
  Label: Destructured source provides type `any`. (1:16 - 1:33)
   1 | const {x: y} = {x: 1} as {x: any}
     |                ^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:11 - 1:11)
   1 | const {x: y} = {x: 1} as {x: any}
     |           ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-40 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:18 - 1:18)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x: y} = {x: 1} as {x: any}) {}
     |                  ~
  Label: Destructured source provides type `any`. (1:23 - 1:40)
   1 | function foo({x: y} = {x: 1} as {x: any}) {}
     |                       ^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:18 - 1:18)
   1 | function foo({x: y} = {x: 1} as {x: any}) {}
     |                  ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-41 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:6 - 1:6)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x: y} = {x: 1} as {x: any})
     |      ~
  Label: Destructured source provides type `any`. (1:11 - 1:28)
   1 | ({x: y} = {x: 1} as {x: any})
     |           ^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:6 - 1:6)
   1 | ({x: y} = {x: 1} as {x: any})
     |      ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-42 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:12 - 1:12)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x: {y}} = {x: {y: 1}} as {x: {y: any}}
     |            ~
  Label: Destructured source provides type `any`. (1:18 - 1:45)
   1 | const {x: {y}} = {x: {y: 1}} as {x: {y: any}}
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:12 - 1:12)
   1 | const {x: {y}} = {x: {y: 1}} as {x: {y: any}}
     |            ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-43 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:19 - 1:19)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x: {y}} = {x: {y: 1}} as {x: {y: any}}) {}
     |                   ~
  Label: Destructured source provides type `any`. (1:25 - 1:52)
   1 | function foo({x: {y}} = {x: {y: 1}} as {x: {y: any}}) {}
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:19 - 1:19)
   1 | function foo({x: {y}} = {x: {y: 1}} as {x: {y: any}}) {}
     |                   ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-44 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:7 - 1:7)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x: {y}} = {x: {y: 1}} as {x: {y: any}})
     |       ~
  Label: Destructured source provides type `any`. (1:13 - 1:40)
   1 | ({x: {y}} = {x: {y: 1}} as {x: {y: any}})
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:7 - 1:7)
   1 | ({x: {y}} = {x: {y: 1}} as {x: {y: any}})
     |       ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-45 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:12 - 1:12)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | const {x: [y]} = {x: {y: 1}} as {x: [any]}
     |            ~
  Label: Destructured source provides type `any`. (1:18 - 1:42)
   1 | const {x: [y]} = {x: {y: 1}} as {x: [any]}
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:12 - 1:12)
   1 | const {x: [y]} = {x: {y: 1}} as {x: [any]}
     |            ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-46 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:19 - 1:19)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | function foo({x: [y]} = {x: {y: 1}} as {x: [any]}) {}
     |                   ~
  Label: Destructured source provides type `any`. (1:25 - 1:49)
   1 | function foo({x: [y]} = {x: {y: 1}} as {x: [any]}) {}
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:19 - 1:19)
   1 | function foo({x: [y]} = {x: {y: 1}} as {x: [any]}) {}
     |                   ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-47 - 1]
Diagnostic 1: unsafeArrayPatternFromTuple (1:7 - 1:7)
Message: Unsafe array destructuring of a tuple element with an any value.
   1 | ({x: [y]} = {x: {y: 1}} as {x: [any]})
     |       ~
  Label: Destructured source provides type `any`. (1:13 - 1:37)
   1 | ({x: [y]} = {x: {y: 1}} as {x: [any]})
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^ Destructured source provides type `any`.
  Label: This binding receives type `any`. (1:7 - 1:7)
   1 | ({x: [y]} = {x: {y: 1}} as {x: [any]})
     |       ^ This binding receives type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-48 - 1]
Diagnostic 1: anyAssignment (1:14 - 1:14)
Message: Unsafe assignment of an any value.
   1 | const x = { y: 1 as any };
     |              ~
  Label: Assigned value has type `any`. (1:16 - 1:23)
   1 | const x = { y: 1 as any };
     |                ^^^^^^^^ Assigned value has type `any`.
  Label: Target expects type `any`. (1:13 - 1:13)
   1 | const x = { y: 1 as any };
     |             ^ Target expects type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-49 - 1]
Diagnostic 1: anyAssignment (1:19 - 1:19)
Message: Unsafe assignment of an any value.
   1 | const x = { y: { z: 1 as any } };
     |                   ~
  Label: Assigned value has type `any`. (1:21 - 1:28)
   1 | const x = { y: { z: 1 as any } };
     |                     ^^^^^^^^ Assigned value has type `any`.
  Label: Target expects type `any`. (1:18 - 1:18)
   1 | const x = { y: { z: 1 as any } };
     |                  ^ Target expects type `any`.
---

[TestNoUnsafeAssignmentRule/invalid-50 - 1]
Diagnostic 1: unsafeAssignment (1:44 - 1:44)
Message: Unsafe assignment between incompatible types.
   1 | const x: { y: Set<Set<Set<string>>> } = { y: new Set<Set<Set<any>>>() };
     |                                            ~
  Label: Assigned value has type `Set<Set<Set<any>>>`. (1:46 - 1:69)
   1 | const x: { y: Set<Set<Set<string>>> } = { y: new Set<Set<Set<any>>>() };
     |                                              ^^^^^^^^^^^^^^^^^^^^^^^^ Assigned value has type `Set<Set<Set<any>>>`.
  Label: Target expects type `Set<Set<Set<string>>>`. (1:43 - 1:43)
   1 | const x: { y: Set<Set<Set<string>>> } = { y: new Set<Set<Set<any>>>() };
     |                                           ^ Target expects type `Set<Set<Set<string>>>`.
---

[TestNoUnsafeAssignmentRule/invalid-51 - 1]
Diagnostic 1: anyAssignment (1:9 - 1:9)
Message: Unsafe assignment of an any value.
   1 | const x = { ...(1 as any) };
     |         ~
  Label: Assigned value has type `any`. (1:11 - 1:27)
   1 | const x = { ...(1 as any) };
     |           ^^^^^^^^^^^^^^^^^ Assigned value has type `any`.
  Label: Target is inferred as `any`. (1:7 - 1:7)
   1 | const x = { ...(1 as any) };
     |       ^ Target is inferred as `any`.
---

[TestNoUnsafeAssignmentRule/invalid-52 - 1]
Diagnostic 1: anyAssignment (4:7 - 4:7)
Message: Unsafe assignment of an any value.
   3 | declare function Foo(props: Props): never;
   4 | <Foo a={1 as any} />;
     |       ~
   5 |       
  Label: Assigned value has type `any`. (4:9 - 4:16)
   3 | declare function Foo(props: Props): never;
   4 | <Foo a={1 as any} />;
     |         ^^^^^^^^ Assigned value has type `any`.
   5 |       
  Label: Target expects type `string`. (4:6 - 4:6)
   3 | declare function Foo(props: Props): never;
   4 | <Foo a={1 as any} />;
     |      ^ Target expects type `string`.
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-53 - 1]
Diagnostic 1: anyAssignmentThis (3:13 - 3:13)
Message: Unsafe assignment of an any value. `this` is typed as `any`.

Help: You can try to fix this by turning on the `noImplicitThis` compiler option, or adding a `this` parameter to the function.
   2 | function foo() {
   3 |   const bar = this;
     |             ~
   4 | }
  Label: `this` has type `any`. (3:15 - 3:18)
   2 | function foo() {
   3 |   const bar = this;
     |               ^^^^ `this` has type `any`.
   4 | }
  Label: Target is inferred as `any`. (3:9 - 3:11)
   2 | function foo() {
   3 |   const bar = this;
     |         ^^^ Target is inferred as `any`.
   4 | }
---

[TestNoUnsafeAssignmentRule/invalid-54 - 1]
Diagnostic 1: anyAssignment (3:15 - 3:15)
Message: Unsafe assignment of an any value.
   2 | type T = [string, T[]];
   3 | const test: T = ['string', []] as any;
     |               ~
   4 |       
  Label: Assigned value has type `any`. (3:17 - 3:37)
   2 | type T = [string, T[]];
   3 | const test: T = ['string', []] as any;
     |                 ^^^^^^^^^^^^^^^^^^^^^ Assigned value has type `any`.
   4 |       
  Label: Target expects type `T`. (3:13 - 3:13)
   2 | type T = [string, T[]];
   3 | const test: T = ['string', []] as any;
     |             ^ Target expects type `T`.
   4 |       
---

[TestNoUnsafeAssignmentRule/invalid-55 - 1]
Diagnostic 1: anyAssignment (4:20 - 4:22)
Message: Unsafe assignment of an any value.
   3 | const bar: any = 1;
   4 | const foo: Foo = { bar };
     |                    ~~~
   5 |       
  Label: Assigned value has type `any`. (4:20 - 4:22)
   3 | const bar: any = 1;
   4 | const foo: Foo = { bar };
     |                    ^^^ Assigned value has type `any`.
   5 |       
  Label: Target expects type `number`. (4:20 - 4:22)
   3 | const bar: any = 1;
   4 | const foo: Foo = { bar };
     |                    ^^^ Target expects type `number`.
   5 |       
---

[TestNoUnsafeAssignmentRule/invalid-56 - 1]
Diagnostic 1: anyAssignment (9:33 - 9:33)
Message: Unsafe assignment of an any value.
   8 |   constructor(
   9 |     private readonly param: Bar = Object.create(null)
     |                                 ~
  10 |   ) {}
  Label: Assigned value has type `any`. (9:35 - 9:53)
   8 |   constructor(
   9 |     private readonly param: Bar = Object.create(null)
     |                                   ^^^^^^^^^^^^^^^^^^^ Assigned value has type `any`.
  10 |   ) {}
  Label: Target expects type `Bar`. (9:29 - 9:31)
   8 |   constructor(
   9 |     private readonly param: Bar = Object.create(null)
     |                             ^^^ Target expects type `Bar`.
  10 |   ) {}
---

[TestNoUnsafeAssignmentRule/invalid-57 - 1]
Diagnostic 1: anyAssignment (4:5 - 4:5)
Message: Unsafe assignment of an any value.
   3 | 
   4 | foo = { bar: 2 } as any;
     |     ~
   5 |       
  Label: Assigned value has type `any`. (4:7 - 4:23)
   3 | 
   4 | foo = { bar: 2 } as any;
     |       ^^^^^^^^^^^^^^^^^ Assigned value has type `any`.
   5 |       
  Label: Target expects type `{ foo: 1; }`. (4:1 - 4:3)
   3 | 
   4 | foo = { bar: 2 } as any;
     | ^^^ Target expects type `{ foo: 1; }`.
   5 |       
---
